syntax = "proto3";

package where_child_bus.v1;

import "google/protobuf/timestamp.proto";

message Nursery {
        string id = 1;
        string nursery_code = 2;
        string name = 3;
        string address = 4;
        string phone_number = 5;
        string email = 6;
        string encrypted_password = 7;
        google.protobuf.Timestamp  created_at = 8;
        google.protobuf.Timestamp  updated_at = 9;
}

message Guardian {
        string id = 1;
        string nursery_id = 2;
        string name = 3;
        string email = 4;
        string phone_number = 5;
        string encrypted_password = 6;
        google.protobuf.Timestamp  created_at = 7;
        google.protobuf.Timestamp  updated_at =8;
}

message Bus {
        string id = 1;
        string nursery_id = 2;
        string name = 3;
        string plate_number = 4;
        enum Status {
                STATUS_UNSPECIFIED = 0;
                STATUS_STOPPED = 1;
                STATUS_RUNNING = 2;
                STATUS_MAINTEINANCE = 3;
        }
        Status status = 5;
        //緯度経度
        double latitude = 6;
        double longitude = 7;
        google.protobuf.Timestamp  created_at = 8;
        google.protobuf.Timestamp  updated_at = 9;
}

message Child {
        string id = 1;
        string nursery_id = 2;
        string guardian_id = 3;
        string name = 4;
        int32 age = 5;
        enum Sex {
                SEX_UNSPECIFIED = 0;
                SEX_MAN = 1;
                SEX_WOMEN = 2;
                SEX_OTHER = 3;
        }
        Sex sex  = 6;
        bool is_ride_morning_bus = 7;
        bool is_ride_evening_bus = 8;
        bool check_for_missing_items = 9;
        bool has_bag  = 10;
        bool has_lunch_box = 11;
        bool has_water_bottle = 12;
        bool has_umbrera = 13;
        bool has_other = 14;
        google.protobuf.Timestamp  created_at = 15;
        google.protobuf.Timestamp  updated_at = 16;
}

message Station {
        string id = 1;
        string guardian_id = 2;
        double latitude = 3;
        double longitude = 4;
        int32 morning_order = 5;
        int32 evening_order = 6;
        google.protobuf.Timestamp  created_at = 7;
        google.protobuf.Timestamp  updated_at = 8;
}

message ChildBusAssociation {
        string id = 1;
        string bus_id = 2;
        string child_id = 3;
        enum BusType {
                BUS_TYPE_UNSPECIFIED = 0;
                BUS_TYPE_MORNING = 1;
                BUS_TYPE_EVENING = 2;
        }
        BusType bus_type = 4;
}

message BusStationAssociation {
        string bus_id = 1;
        string station_id = 2;
}

message ChildPhoto {
        string id = 1;
        string child_id = 2;
        string s3_bucket = 3;
        string s3_key = 4;
        google.protobuf.Timestamp  created_at = 5;
        google.protobuf.Timestamp  updated_at = 6;
}

message BoardingRecord {
        string id = 1;
        string child_id = 2;
        string bus_id = 3;
        bool is_boarding = 4;
        google.protobuf.Timestamp  timestamp = 5;
}